correcting formattedName method and sorting names in file according to that